ubuntu-image (0.8ubuntu1) UNRELEASED; urgency=medium

  * Fix snap creation.  (LP: #1631961)

 -- Barry Warsaw <barry@ubuntu.com>  Mon, 10 Oct 2016 10:48:49 -0400

ubuntu-image (0.7ubuntu1) yakkety; urgency=medium

  [ Steve Langasek ]
  * Don't build 4GB images, instead build images just as large as needed
    to hold the contents and let ubuntu-core resize them dynamically on
    first boot.  LP: #1619362.
  * Ensure cross-filesystem copies don't accidentally de-sparsify our
    image.
  * Update model.assertion test file to be compatible with snapd 2.14.2.
  * debian/control:
    - Declare Testsuite: autopkgtest-pkg-python in debian/control so that the
      package is visible to the test infrastructure.
    - Remove e2fsprogs from Build-Depends and Depends as per lintian.

  [ Barry Warsaw ]
  * Repair snapcraft.yaml for Python plugin changes.
  * Reorganize and flesh out command line options.
  * 100% test coverage. (LP: #1617445)
  * Use only the autopkgtest infrastructure for pull request testing.
    Don't use Travis-CI anymore.  (LP: #1625729)

 -- Barry Warsaw <barry@ubuntu.com>  Thu, 06 Oct 2016 18:46:06 -0400

ubuntu-image (0.6ubuntu3) yakkety; urgency=medium

  * Make the mtools a versioned dep for real, not a versioned build-dep.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 08 Sep 2016 00:45:37 -0700

ubuntu-image (0.6ubuntu2) yakkety; urgency=medium

  * Add a versioned dependency on a fixed mtools.  LP: #1619718.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 08 Sep 2016 00:03:19 -0700

ubuntu-image (0.6ubuntu1) yakkety; urgency=medium

  * Add --extra-snaps option to support specifying extra snaps to include.
    LP: #1619219.
  * Show output of snap prep-image, so that the user gets download progress
    instead of long pauses with no activity.  LP: #1619194.
  * Only set UBUNTU_IMAGE_SKIP_COPY_UNVERIFIED_MODEL in tests, now that
    model assertions are live.  LP: #1619374.
