@@ -1,6 +1,8 @@
 ubuntu-image (0.8ubuntu1) UNRELEASED; urgency=medium
 
   * Fix snap creation.  (LP: #1631961)
+  * Copy everything under <unpackdir>/image into <rootfs>/system-data
+    except boot/ and home/.  (LP: #1632134)
 
  -- Barry Warsaw <barry@ubuntu.com>  Mon, 10 Oct 2016 10:48:49 -0400
 
